# universal-sync

./: .gitignore  ARCHITECTURE.md  COMPACTION.md  Cargo.toml  README.md
.cursor/rules/: universal-sync.mdc
.cursor/skills/rust-lint-fmt/: SKILL.md
.cursor/skills/update-plan/: SKILL.md
filament-core/: Cargo.toml
filament-core/src/: codec.rs  crdt.rs  error.rs  extension.rs  external_commit.rs  lib.rs  proposal.rs  protocol.rs  sink_stream.rs
filament-editor/: Cargo.toml  TODO.md  tauri.conf.json
filament-editor/capabilities/: default.json
filament-editor/src/: actor.rs  commands.rs  document.rs  lib.rs  main.rs  types.rs  yrs_crdt.rs
filament-editor/src/tests/: actors.rs
filament-editor/tests/: actors.rs
filament-editor/ui/: index.html  package-lock.json  package.json
filament-editor/ui/src/: App.tsx  tauri.ts  types.ts
filament-editor/ui/src/components/: EditorToolbar.tsx  EmptyState.tsx  Header.tsx  JoinSection.tsx  ShareModal.tsx
filament-editor/ui/src/hooks/: useTauriEvents.ts  useToast.tsx
filament-editor/ui/src/styles/: main.css
filament-spool/: Cargo.toml
filament-spool/src/: acceptor.rs  api.rs  learner.rs  lib.rs  main.rs  metrics.rs  registry.rs  server.rs  state_store.rs
filament-testing/: Cargo.toml
filament-testing/src/: lib.rs  repl.rs  yrs_crdt.rs
filament-testing/tests/: integration.rs  stress.rs  yrs_v2_bug.rs
filament-warp/: Cargo.toml
filament-warp/spec/: .gitignore  MultiPaxos.tla
filament-warp/src/: lib.rs
filament-warp/src/acceptor/: handler.rs
filament-warp/src/core/: acceptor.rs  proposer.rs  stateright_tests.rs
filament-warp/src/proposer/: mod.rs  quorum.rs
filament-weave/: Cargo.toml  README.md
filament-weave/src/: client.rs  connection.rs  connector.rs  erasure.rs  group_state.rs  learner.rs  lib.rs  main.rs  rendezvous.rs  repl.rs
filament-weave/src/group/: acceptor_actor.rs  group_actor.rs  mod.rs
paxos/: Cargo.toml
paxos/spec/: MultiPaxos.cfg  MultiPaxos.tla  README.md
paxos/src/: acceptor.rs  config.rs  connection.rs  core.rs  fuse.rs  learner.rs  lib.rs  messages.rs  proposer.rs  quorum.rs  state.rs  traits.rs
paxos/src/acceptor/: handler.rs  mod.rs  runner.rs  state.rs
paxos/src/core/: acceptor.rs  mod.rs  proposer.rs  quorum.rs  stateright_tests.rs  types.rs
paxos/src/proposer/: mod.rs  quorum.rs
paxos/tests/: integration.rs  stateright_tests.rs  turmoil_persistence_tests.rs  turmoil_tests.rs
plan/: ACCEPTOR-STORAGE.md  BACKOFF-AND-CONTENTION.md  COMMIT-CATCHUP.md  COMPACTED-ERASURE-CODING.md  COMPACTION-LEADER-ELECTION.md  CONTIGUOUS-WATERMARK.md  DESIGN-REVIEW.md  EXTERNAL-COMMIT-JOIN.md  KEY-ROTATION.md  MESSAGE-STORE-KEY-FORMAT.md  PRESENCE-AND-AWARENESS.md  REMOVED-MEMBER-EDITS.md
sync/: Cargo.toml
sync-acceptor/: Cargo.toml
sync-acceptor/src/: acceptor.rs  connector.rs  epoch_roster.rs  learner.rs  lib.rs  main.rs  registry.rs  server.rs  state_store.rs
sync-core/: Cargo.toml
sync-core/src/: codec.rs  crdt.rs  error.rs  extension.rs  handshake.rs  lib.rs  message.rs  proposal.rs  protocol.rs  sink_stream.rs  util.rs  welcome.rs
sync-core/src/crdt/: mod.rs
sync-editor/: Cargo.toml  TODO.md  tauri.conf.json
sync-editor/capabilities/: default.json
sync-editor/src/: actor.rs  app_state.rs  commands.rs  document.rs  editor_client.rs  lib.rs  main.rs  tauri_app.rs  types.rs
sync-editor/tests/: actors.rs  sync_test.rs
sync-editor/ui/: app.js  index.html  package-lock.json  package.json
sync-editor/ui/src/: App.tsx  main.tsx  tauri.ts  types.ts
sync-editor/ui/src/components/: DocumentList.tsx  EditorView.tsx  MonacoWrapper.tsx  ShareModal.tsx  Sidebar.tsx
sync-editor/ui/src/hooks/: useTauriEvents.ts
sync-editor/ui/src/styles/: main.css
sync-editor/ui/styles/: main.css
sync-proposer/: Cargo.toml
sync-proposer/src/: client.rs  connection.rs  connector.rs  error.rs  flows.rs  group.rs  group_state.rs  learner.rs  lib.rs  main.rs  rendezvous.rs  repl.rs  store.rs
sync-proposer/src/group/: acceptor_actor.rs  group_actor.rs  mod.rs
sync-testing/: Cargo.toml
sync-testing/src/: lib.rs  yrs_crdt.rs
sync-testing/tests/: integration.rs
sync/src/: acceptor.rs  extension.rs  learner.rs  lib.rs  message.rs  proposal.rs  state_store.rs
