[workspace]
members = ["paxos", "sync-core", "sync-proposer", "sync-acceptor", "sync-testing", "sync-editor"]
resolver = "3"

[workspace.dependencies]
zerocopy = { version = "0.8", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
scopeguard = "1"
turmoil = { version = "0.7", features = ["unstable-fs"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
bytes = "1"
rand = "0.9"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
pin-project-lite = "0.2"
fjall = "3"
tempfile = "3"
iroh = "0.96"
mls-rs-crypto-rustcrypto = { version = "0.20", default-features = false }
mls-rs-core = "0.25"
mls-rs = { version = "0.52", default-features = false, features = ["std"] }
yrs = { version = "0.25" }
zeroize = "1.8"
sha2 = "0.10"

error-stack = "0.6"
bs58 = "0.5"
async-stream = "0.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
