[workspace]
members = ["filament-warp", "filament-core", "filament-weave", "filament-spool", "filament-testing", "filament-editor"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
scopeguard = "1"
turmoil = { version = "0.7", features = ["unstable-fs"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
bytes = { version = "1", features = ["serde"] }
rand = "0.9"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
pin-project-lite = "0.2"
fjall = { version = "3", default-features = false, features = ["metrics", "bytes_1"] }
tempfile = "3"
iroh = { version = "0.96", features = ["address-lookup-mdns"] }
mls-rs-crypto-rustcrypto = { version = "0.20", default-features = false }
mls-rs-core = "0.25"
mls-rs = { version = "0.52", default-features = false, features = ["std", "custom_proposal", "out_of_order"] }
yrs = { version = "0.25" }
zeroize = "1.8"
sha2 = "0.10"
hmac = "0.12"

error-stack = "0.6"
bs58 = "0.5"
async-stream = "0.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
measured = "0.0.24"
measured-tokio = "0.0.24"
axum = "0.8"
serde_json = "1"
quick_cache = "0.6"
hdrhistogram = "7.5"
reed-solomon-erasure = "6"