[package]
name = "filament-editor"
version = "0.1.0"
edition = "2024"
default-run = "filament-editor"

[lib]
name = "filament_editor"
path = "src/lib.rs"

[[bin]]
name = "filament-editor"
path = "src/main.rs"

[dependencies]
filament-core = { path = "../filament-core" }
filament-weave = { path = "../filament-weave" }
tauri = { version = "2", features = [] }
bytes.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = "1"
iroh.workspace = true
mls-rs = { workspace = true }
yrs.workspace = true
bs58.workspace = true
hex = "0.4"
error-stack.workspace = true
postcard.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

[dev-dependencies]
filament-spool = { path = "../filament-spool" }
filament-testing = { path = "../filament-testing" }
tempfile.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
