[package]
name = "filament-spool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "acceptor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
bs58.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true
filament-core = { path = "../filament-core" }
filament-warp = { path = "../filament-warp" }
mls-rs = { workspace = true, features = ["external_client"] }
mls-rs-crypto-rustcrypto.workspace = true
serde.workspace = true
postcard.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
fjall.workspace = true
iroh.workspace = true
bytes.workspace = true
pin-project-lite.workspace = true
error-stack.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
