[package]
name = "filament-spool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "acceptor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
bs58.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true
filament-core = { path = "../filament-core" }
filament-warp = { path = "../filament-warp" }
mls-rs = { workspace = true, features = ["external_client"] }
mls-rs-crypto-rustcrypto.workspace = true
serde.workspace = true
postcard.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
fjall.workspace = true
iroh.workspace = true
bytes.workspace = true
error-stack.workspace = true
sha2.workspace = true
measured.workspace = true
measured-tokio.workspace = true
axum.workspace = true
serde_json.workspace = true
quick_cache.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dev-dependencies]
tempfile.workspace = true
