[package]
name = "filament-weave"
version = "0.1.0"
edition = "2024"

[dependencies]
filament-core = { path = "../filament-core" }
filament-warp = { path = "../filament-warp" }
mls-rs = { workspace = true, features = ["prior_epoch", "private_message"] }
mls-rs-core.workspace = true
mls-rs-crypto-rustcrypto.workspace = true
serde.workspace = true
postcard.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
iroh.workspace = true
bytes.workspace = true
pin-project-lite.workspace = true
clap = { version = "4", features = ["derive"] }
rustyline = "15"
bs58.workspace = true
fjall.workspace = true
rand.workspace = true
error-stack.workspace = true
async-stream.workspace = true
xxhash-rust.workspace = true
zeroize.workspace = true
sha2.workspace = true
hmac.workspace = true

[dev-dependencies]
tempfile = "3"
