[package]
name = "basic-paxos"
version = "0.1.0"
edition = "2024"

[dependencies]
zerocopy.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["join-map"] }
futures.workspace = true
scopeguard.workspace = true
rand.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
turmoil.workspace = true
bytes.workspace = true
tracing-subscriber.workspace = true
