[package]
name = "basic-paxos"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
zerocopy.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["join-map"] }
futures.workspace = true
scopeguard.workspace = true
rand.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
pin-project-lite.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
turmoil.workspace = true
bytes.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
postcard.workspace = true
serde_json.workspace = true
basic-paxos = { path = ".", features = ["serde"] }
stateright = "0.31.0"
num_cpus = "1.17.0"
