[package]
name = "universal-sync-core"
version = "0.1.0"
edition = "2021"

[dependencies]
universal-sync-paxos = { path = "../paxos" }
mls-rs = { version = "0.43", default-features = false }
serde.workspace = true
postcard.workspace = true
iroh.workspace = true
error-stack.workspace = true
bs58.workspace = true
pin-project-lite.workspace = true
tokio-util.workspace = true
tokio.workspace = true
futures.workspace = true
bytes.workspace = true
