[package]
name = "universal-sync-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
yrs = ["dep:yrs"]

[dependencies]
universal-sync-paxos = { path = "../paxos" }
mls-rs = { version = "0.52", default-features = false }
serde.workspace = true
postcard.workspace = true
iroh.workspace = true
error-stack.workspace = true
bs58.workspace = true
sha2.workspace = true
pin-project-lite.workspace = true
tokio-util.workspace = true
tokio.workspace = true
futures.workspace = true
bytes.workspace = true

# Optional CRDT implementations
yrs = { version = "0.25", optional = true }
