[package]
name = "universal-sync-proposer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proposer"
path = "src/main.rs"

[dependencies]
universal-sync-core = { path = "../sync-core" }
universal-sync-paxos = { path = "../paxos" }
mls-rs = { version = "0.43", default-features = false, features = ["prior_epoch", "private_message"] }
mls-rs-core = "0.20"
mls-rs-crypto-rustcrypto = { version = "0.13", default-features = false }
serde.workspace = true
postcard.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
iroh.workspace = true
bytes.workspace = true
pin-project-lite.workspace = true
clap = { version = "4", features = ["derive"] }
rustyline = "15"
hex = "0.4"
fjall.workspace = true
rand.workspace = true
error-stack.workspace = true
async-stream.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
tempfile = "3"
